--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -91,7 +91,7 @@ The following packages will be downloaded:
     kiwisolver-1.4.4           |  py310hbf28c38_1          76 KB  conda-forge
     krb5-1.20.1                |       h81ceb04_0         1.3 MB  conda-forge
     lame-3.100                 |    h166bdaf_1003         496 KB  conda-forge
-    lcms2-2.14                 |       h6ed2654_0         256 KB  conda-forge
+    lcms2-2.14                 |       hfd0df8a_1         235 KB  conda-forge
     lerc-4.0.0                 |       h27087fc_0         275 KB  conda-forge
     libbrotlicommon-1.0.9      |       h166bdaf_8          66 KB  conda-forge
     libbrotlidec-1.0.9         |       h166bdaf_8          33 KB  conda-forge
@@ -116,7 +116,7 @@ The following packages will be downloaded:
     libpq-15.1                 |       hb675445_2         2.4 MB  conda-forge
     libsndfile-1.1.0           |       hcb278e6_1         341 KB  conda-forge
     libsystemd0-252            |       h2a991cd_0         384 KB  conda-forge
-    libtiff-4.4.0              |       h82bc61c_5         473 KB  conda-forge
+    libtiff-4.5.0              |       h82bc61c_0         398 KB  conda-forge
     libtool-2.4.6              |    h9c3ff4c_1008         511 KB  conda-forge
     libudev1-252               |       h166bdaf_0         118 KB  conda-forge
     libvorbis-1.3.7            |       h9c3ff4c_0         280 KB  conda-forge
@@ -133,10 +133,10 @@ The following packages will be downloaded:
     mysql-libs-8.0.31          |       hbc51c84_0         1.9 MB  conda-forge
     nspr-4.35                  |       h27087fc_0         222 KB  conda-forge
     nss-3.82                   |       he02c5a1_0         1.9 MB  conda-forge
-    openjpeg-2.5.0             |       h7d73246_1         533 KB  conda-forge
+    openjpeg-2.5.0             |       hfec8fc6_2         344 KB  conda-forge
     packaging-22.0             |     pyhd8ed1ab_0          40 KB  conda-forge
     pcre2-10.40                |       hc3806b6_0         2.3 MB  conda-forge
-    pillow-9.2.0               |  py310h454ad03_3        45.3 MB  conda-forge
+    pillow-9.2.0               |  py310h023d228_4        43.0 MB  conda-forge
     ply-3.11                   |             py_1          44 KB  conda-forge
     pthread-stubs-0.4          |    h36c2ea0_1001           5 KB  conda-forge
     pulseaudio-16.1            |       h126f2b6_0         1.7 MB  conda-forge
@@ -159,7 +159,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       243.1 MB
+                                           Total:       240.5 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -194,7 +194,7 @@ The following NEW packages will be INSTALLED:
   kiwisolver         conda-forge/linux-64::kiwisolver-1.4.4-py310hbf28c38_1
   krb5               conda-forge/linux-64::krb5-1.20.1-h81ceb04_0
   lame               conda-forge/linux-64::lame-3.100-h166bdaf_1003
-  lcms2              conda-forge/linux-64::lcms2-2.14-h6ed2654_0
+  lcms2              conda-forge/linux-64::lcms2-2.14-hfd0df8a_1
   lerc               conda-forge/linux-64::lerc-4.0.0-h27087fc_0
   libbrotlicommon    conda-forge/linux-64::libbrotlicommon-1.0.9-h166bdaf_8
   libbrotlidec       conda-forge/linux-64::libbrotlidec-1.0.9-h166bdaf_8
@@ -219,7 +219,7 @@ The following NEW packages will be INSTALLED:
   libpq              conda-forge/linux-64::libpq-15.1-hb675445_2
   libsndfile         conda-forge/linux-64::libsndfile-1.1.0-hcb278e6_1
   libsystemd0        conda-forge/linux-64::libsystemd0-252-h2a991cd_0
-  libtiff            conda-forge/linux-64::libtiff-4.4.0-h82bc61c_5
+  libtiff            conda-forge/linux-64::libtiff-4.5.0-h82bc61c_0
   libtool            conda-forge/linux-64::libtool-2.4.6-h9c3ff4c_1008
   libudev1           conda-forge/linux-64::libudev1-252-h166bdaf_0
   libvorbis          conda-forge/linux-64::libvorbis-1.3.7-h9c3ff4c_0
@@ -236,10 +236,10 @@ The following NEW packages will be INSTALLED:
   mysql-libs         conda-forge/linux-64::mysql-libs-8.0.31-hbc51c84_0
   nspr               conda-forge/linux-64::nspr-4.35-h27087fc_0
   nss                conda-forge/linux-64::nss-3.82-he02c5a1_0
-  openjpeg           conda-forge/linux-64::openjpeg-2.5.0-h7d73246_1
+  openjpeg           conda-forge/linux-64::openjpeg-2.5.0-hfec8fc6_2
   packaging          conda-forge/noarch::packaging-22.0-pyhd8ed1ab_0
   pcre2              conda-forge/linux-64::pcre2-10.40-hc3806b6_0
-  pillow             conda-forge/linux-64::pillow-9.2.0-py310h454ad03_3
+  pillow             conda-forge/linux-64::pillow-9.2.0-py310h023d228_4
   ply                conda-forge/noarch::ply-3.11-py_1
   pthread-stubs      conda-forge/linux-64::pthread-stubs-0.4-h36c2ea0_1001
   pulseaudio         conda-forge/linux-64::pulseaudio-16.1-h126f2b6_0
@@ -309,4 +309,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 19 December 2022 12:29">Monday 19 December 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 19 December 2022 18:25">Monday 19 December 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
