--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -81,8 +81,8 @@ The following packages will be downloaded:
     gettext-0.21.1             |       h27087fc_0         4.1 MB  conda-forge
     glib-2.74.1                |       h6239696_1         474 KB  conda-forge
     glib-tools-2.74.1          |       h6239696_1         107 KB  conda-forge
-    gst-plugins-base-1.21.2    |       h3e40eee_0         2.5 MB  conda-forge
-    gstreamer-1.21.2           |       hd4edc92_0         1.9 MB  conda-forge
+    gst-plugins-base-1.21.3    |       h4243ec0_1         2.6 MB  conda-forge
+    gstreamer-1.21.3           |       h25f0c4b_1         1.9 MB  conda-forge
     gstreamer-orc-0.4.33       |       h166bdaf_0         299 KB  conda-forge
     icu-70.1                   |       h27087fc_0        13.5 MB  conda-forge
     jack-1.9.21                |       h583fa2b_2         450 KB  conda-forge
@@ -159,7 +159,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       240.5 MB
+                                           Total:       240.6 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -184,8 +184,8 @@ The following NEW packages will be INSTALLED:
   gettext            conda-forge/linux-64::gettext-0.21.1-h27087fc_0
   glib               conda-forge/linux-64::glib-2.74.1-h6239696_1
   glib-tools         conda-forge/linux-64::glib-tools-2.74.1-h6239696_1
-  gst-plugins-base   conda-forge/linux-64::gst-plugins-base-1.21.2-h3e40eee_0
-  gstreamer          conda-forge/linux-64::gstreamer-1.21.2-hd4edc92_0
+  gst-plugins-base   conda-forge/linux-64::gst-plugins-base-1.21.3-h4243ec0_1
+  gstreamer          conda-forge/linux-64::gstreamer-1.21.3-h25f0c4b_1
   gstreamer-orc      conda-forge/linux-64::gstreamer-orc-0.4.33-h166bdaf_0
   icu                conda-forge/linux-64::icu-70.1-h27087fc_0
   jack               conda-forge/linux-64::jack-1.9.21-h583fa2b_2
@@ -309,4 +309,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Wednesday 21 December 2022 00:42">Wednesday 21 December 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Wednesday 21 December 2022 06:15">Wednesday 21 December 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
