--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -115,7 +115,7 @@ The following packages will be downloaded:
     libopus-1.3.1              |       h7f98852_1         255 KB  conda-forge
     libpng-1.6.39              |       h753d276_0         276 KB  conda-forge
     libpq-15.1                 |       hb675445_3         2.4 MB  conda-forge
-    libsndfile-1.1.0           |       hcb278e6_1         341 KB  conda-forge
+    libsndfile-1.2.0           |       hb75c966_0         342 KB  conda-forge
     libsystemd0-252            |       h2a991cd_0         384 KB  conda-forge
     libtiff-4.5.0              |       h82bc61c_0         398 KB  conda-forge
     libtool-2.4.7              |       h27087fc_0         402 KB  conda-forge
@@ -140,7 +140,7 @@ The following packages will be downloaded:
     pillow-9.4.0               |  py310h4927cde_0        44.1 MB  conda-forge
     ply-3.11                   |             py_1          44 KB  conda-forge
     pthread-stubs-0.4          |    h36c2ea0_1001           5 KB  conda-forge
-    pulseaudio-16.1            |       h126f2b6_0         1.7 MB  conda-forge
+    pulseaudio-16.1            |       ha8d29e2_1         1.5 MB  conda-forge
     pyparsing-3.0.9            |     pyhd8ed1ab_0          79 KB  conda-forge
     pyqt-5.15.7                |  py310h29803b5_2         6.2 MB  conda-forge
     pyqt5-sip-12.11.0          |  py310hd8f1fbe_2          86 KB  conda-forge
@@ -159,7 +159,7 @@ The following packages will be downloaded:
     xorg-libxau-1.0.9          |       h7f98852_0          13 KB  conda-forge
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       242.1 MB
+                                           Total:       241.9 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -218,7 +218,7 @@ The following NEW packages will be INSTALLED:
   libopus            conda-forge/linux-64::libopus-1.3.1-h7f98852_1
   libpng             conda-forge/linux-64::libpng-1.6.39-h753d276_0
   libpq              conda-forge/linux-64::libpq-15.1-hb675445_3
-  libsndfile         conda-forge/linux-64::libsndfile-1.1.0-hcb278e6_1
+  libsndfile         conda-forge/linux-64::libsndfile-1.2.0-hb75c966_0
   libsystemd0        conda-forge/linux-64::libsystemd0-252-h2a991cd_0
   libtiff            conda-forge/linux-64::libtiff-4.5.0-h82bc61c_0
   libtool            conda-forge/linux-64::libtool-2.4.7-h27087fc_0
@@ -243,7 +243,7 @@ The following NEW packages will be INSTALLED:
   pillow             conda-forge/linux-64::pillow-9.4.0-py310h4927cde_0
   ply                conda-forge/noarch::ply-3.11-py_1
   pthread-stubs      conda-forge/linux-64::pthread-stubs-0.4-h36c2ea0_1001
-  pulseaudio         conda-forge/linux-64::pulseaudio-16.1-h126f2b6_0
+  pulseaudio         conda-forge/linux-64::pulseaudio-16.1-ha8d29e2_1
   pyparsing          conda-forge/noarch::pyparsing-3.0.9-pyhd8ed1ab_0
   pyqt               conda-forge/linux-64::pyqt-5.15.7-py310h29803b5_2
   pyqt5-sip          conda-forge/linux-64::pyqt5-sip-12.11.0-py310hd8f1fbe_2
@@ -309,4 +309,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Thursday 12 January 2023 06:15">Thursday 12 January 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Thursday 12 January 2023 12:21">Thursday 12 January 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
