--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -130,8 +130,8 @@ The following packages will be downloaded:
     matplotlib-base-3.6.3      |  py310he60537e_0         6.4 MB  conda-forge
     mpg123-1.31.2              |       hcb278e6_0         474 KB  conda-forge
     munkres-1.1.4              |     pyh9f0ad1d_0          12 KB  conda-forge
-    mysql-common-8.0.31        |       h26416b9_0         1.9 MB  conda-forge
-    mysql-libs-8.0.31          |       hbc51c84_0         1.9 MB  conda-forge
+    mysql-common-8.0.32        |       ha901b37_0         727 KB  conda-forge
+    mysql-libs-8.0.32          |       hd7da12d_0         1.5 MB  conda-forge
     nspr-4.35                  |       h27087fc_0         222 KB  conda-forge
     nss-3.82                   |       he02c5a1_0         1.9 MB  conda-forge
     openjpeg-2.5.0             |       hfec8fc6_2         344 KB  conda-forge
@@ -159,7 +159,7 @@ The following packages will be downloaded:
     xorg-libxau-1.0.9          |       h7f98852_0          13 KB  conda-forge
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       241.8 MB
+                                           Total:       240.1 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -233,8 +233,8 @@ The following NEW packages will be INSTALLED:
   matplotlib-base    conda-forge/linux-64::matplotlib-base-3.6.3-py310he60537e_0
   mpg123             conda-forge/linux-64::mpg123-1.31.2-hcb278e6_0
   munkres            conda-forge/noarch::munkres-1.1.4-pyh9f0ad1d_0
-  mysql-common       conda-forge/linux-64::mysql-common-8.0.31-h26416b9_0
-  mysql-libs         conda-forge/linux-64::mysql-libs-8.0.31-hbc51c84_0
+  mysql-common       conda-forge/linux-64::mysql-common-8.0.32-ha901b37_0
+  mysql-libs         conda-forge/linux-64::mysql-libs-8.0.32-hd7da12d_0
   nspr               conda-forge/linux-64::nspr-4.35-h27087fc_0
   nss                conda-forge/linux-64::nss-3.82-he02c5a1_0
   openjpeg           conda-forge/linux-64::openjpeg-2.5.0-hfec8fc6_2
@@ -309,4 +309,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Thursday 19 January 2023 18:16">Thursday 19 January 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Friday 20 January 2023 00:48">Friday 20 January 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
